gw dep tracking continued.

--- a/gw/components/ibex/CMakeLists.txt
+++ b/gw/components/ibex/CMakeLists.txt
@@ -1,5 +1,5 @@
 #gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
     TOP_MODULE ibex_top 
-    OOC_TARGET ibex 
+    COMPONENT_NAME ibex 
 )
