--- a/gw/components/litedram/CMakeLists.txt
+++ b/gw/components/litedram/CMakeLists.txt
@@ -1,5 +1,5 @@
 #gw_component_rules function is defined in the parent CMakeLists.txt.
 gw_component_rules(
     TOP_MODULE litedram_wrapper 
-    OOC_TARGET litedram
+    COMPONENT_NAME litedram
 )
