reshuffled some CMakeLists logic.

--- a/gw/CMakeLists.txt
+++ b/gw/CMakeLists.txt
@@ -14,5 +14,173 @@ endif()
 #A top-level target aggregating all lint targets.
 add_custom_target(lint_all ALL)
 
+function(vivado_cmd cmd tcl_script)
+    list(JOIN ARGN " " _tcl_args)
+    set(${cmd} "vivado -nolog -nojournal -mode batch -notrace -source ${tcl_script} -tclargs ${_tcl_args}" PARENT_SCOPE)
+endfunction()
+
+#Function grouping common gateware build rules.
+#TOP_MODULE: name of top module.
+#PRJ_COMP_NAME: project or component name, e.g. wbuart32
+#CONSTRAINTS_FILE_LIST: Constraints file list, if any. 
+#MEM_FILE_LIST: Mem file list, if any.
+#VERILATOR_CPP_FLAGS: CPP flags to use when verilating. Usually empty. 
+#VERILATOR_LD_FLAGS: LD flags to use when verilating. Usually empty. 
+function (gw_common_rules)
+    set(options)
+    set(oneValueArgs TOP_MODULE PRJ_COMP_NAME CONSTRAINTS_FILE_LIST MEM_FILE_LIST VERILATOR_CPP_FLAGS VERILATOR_LD_FLAGS)
+    set(multiValueArgs)
+    
+    cmake_parse_arguments(gw_common_rules
+        "${options}"
+        "${oneValueArgs}"
+        "${multiValueArgs}"
+        ${ARGN}
+    )
+
+    set(_top_module ${gw_common_rules_TOP_MODULE}) 
+    set(_prj_comp_name ${gw_common_rules_PRJ_COMP_NAME})
+    set(_constraints_file_list ${gw_common_rules_CONSTRAINTS_FILE_LIST})
+    set(_mem_file_list ${gw_common_rules_MEM_FILE_LIST})
+    set(_verilator_cpp_flags ${gw_common_rules_VERILATOR_CPP_FLAGS})
+    set(_verilator_ld_flags ${gw_common_rules_VERILATOR_LD_FLAGS})
+
+    # Dummy output which is never actually produced. Anything that depends on
+    # this will always be rebuilt.
+    add_custom_command(
+        OUTPUT always_rebuild
+        COMMAND cmake -E echo
+        COMMENT
+            "always_rebuild dummy command."
+    )
+
+    add_custom_command(
+        OUTPUT
+            ${_prj_comp_name}.vlts
+        COMMAND
+            ${PROJECT_SOURCE_DIR}/scripts/bender_get_vlts.sh ${CMAKE_CURRENT_LIST_DIR} ${_prj_comp_name}.vlts
+        WORKING_DIRECTORY
+            ${CMAKE_CURRENT_BINARY_DIR}
+        DEPENDS
+            always_rebuild
+        COMMENT
+            "Generating list of .vlt files."
+        VERBATIM
+    )
+
+    add_custom_command(
+        OUTPUT
+            ${_prj_comp_name}.verilator_sources
+        COMMAND
+            ${PROJECT_SOURCE_DIR}/scripts/bender_gen_verilator_sources.sh ${CMAKE_CURRENT_LIST_DIR} ${_prj_comp_name}.verilator_sources ${CMAKE_CURRENT_BINARY_DIR}/Vmodel ${_prj_comp_name}
+        BYPRODUCTS
+
+            ${_prj_comp_name}.verilator_sources.dep
+        WORKING_DIRECTORY
+            ${CMAKE_CURRENT_BINARY_DIR}
+        DEPENDS
+            always_rebuild
+        COMMENT
+            "Generating verilator source list."
+        VERBATIM
+    )
+
+    add_custom_target(${_prj_comp_name}_lint
+        WORKING_DIRECTORY
+            ${CMAKE_CURRENT_BINARY_DIR}
+        COMMAND
+            ${PROJECT_SOURCE_DIR}/scripts/verilator_lint_check.sh ${_top_module} ${_prj_comp_name}.vlts ${_prj_comp_name}.waiver ${_prj_comp_name}.verilator_sources ${_verilator_cpp_flags} ${_verilator_ld_flags}
+        DEPENDS
+            ${_prj_comp_name}.vlts
+            ${_prj_comp_name}.verilator_sources
+        BYPRODUCTS 
+            ${_prj_comp_name}.waiver
+        COMMENT
+            "Lint check."
+        VERBATIM
+    )
+
+    #Include lint target in the lint_all dependency list.
+    add_dependencies(lint_all ${_prj_comp_name}_lint)
+
+    if(CMAKE_BUILD_TYPE STREQUAL "fpga")
+        add_custom_command(
+            OUTPUT
+                ${_prj_comp_name}.vivado_sources
+            BYPRODUCTS
+                ${CMAKE_CURRENT_BINARY_DIR}/${_prj_comp_name}.vivado_sources.dep
+            COMMAND
+                ${PROJECT_SOURCE_DIR}/scripts/bender_gen_vivado_sources.sh ${CMAKE_CURRENT_LIST_DIR} ${_prj_comp_name}.vivado_sources ${CMAKE_CURRENT_BINARY_DIR}/project.runs/synth_1/${_top_module}.dcp ${_prj_comp_name}
+            WORKING_DIRECTORY
+                ${CMAKE_CURRENT_BINARY_DIR}
+            DEPENDS
+                always_rebuild
+            COMMENT
+                "Generating vivado source list."
+            VERBATIM
+        )
+
+        vivado_cmd(create_project_cmd ${PROJECT_SOURCE_DIR}/scripts/vivado_create_project.tcl
+                    -project project.xpr 
+                    -part ${PART} -sources ${_prj_comp_name}.vivado_sources
+                    -outputDir ${CMAKE_CURRENT_BINARY_DIR} -top ${_top_module})
+
+        if (NOT ${_constraints_file_list} STREQUAL "")
+            string(APPEND create_project_cmd " -constraints " ${_constraints_file_list})
+        endif()
+        if (NOT ${_mem_file_list} STREQUAL "")
+            string(APPEND create_project_cmd " -mem_files " ${_mem_file_list})
+        endif()
+
+        add_custom_command(
+            OUTPUT
+                ${CMAKE_CURRENT_BINARY_DIR}/project.dep
+            COMMAND
+                bash -c ${create_project_cmd}
+            COMMAND
+                touch ${CMAKE_CURRENT_BINARY_DIR}/project.dep
+            BYPRODUCTS
+                ${CMAKE_CURRENT_BINARY_DIR}/project.xpr
+            WORKING_DIRECTORY
+                ${CMAKE_CURRENT_BINARY_DIR}
+            DEPENDS
+                ${_prj_comp_name}.vivado_sources
+                ${_constraints_file_list}
+                ${_mem_file_list}
+            COMMENT
+                "Creating Vivado project."
+            VERBATIM
+        )
+
+        vivado_cmd(synth_cmd ${PROJECT_SOURCE_DIR}/scripts/vivado_synth.tcl
+            -project project.xpr -outputDir $OUTDIR ${CMAKE_CURRENT_BINARY_DIR})
+
+        add_custom_command(
+            OUTPUT
+                ${CMAKE_CURRENT_BINARY_DIR}/project.runs/synth_1/${_top_module}.dcp
+            COMMAND
+                bash -c ${synth_cmd}
+            WORKING_DIRECTORY
+                ${CMAKE_CURRENT_BINARY_DIR}
+            DEPENDS
+                ${CMAKE_CURRENT_BINARY_DIR}/project.dep
+            DEPFILE
+                ${CMAKE_CURRENT_BINARY_DIR}/${_prj_comp_name}.vivado_sources.dep
+            COMMENT
+                "Project or component synthesis."
+            VERBATIM
+        )
+
+        add_custom_target(${_prj_comp_name}_synth
+            WORKING_DIRECTORY
+                ${CMAKE_CURRENT_BINARY_DIR}
+            DEPENDS
+                ${CMAKE_CURRENT_BINARY_DIR}/project.runs/synth_1/${_top_module}.dcp
+            COMMENT
+                "Project or component synthesis target."
+        )
+    endif()   
+endfunction()
+
 add_subdirectory(components)
 add_subdirectory(projects)
