--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ nav:
     - Interrupts: interrupts.md
     - Estimated FPGA Utilization: estimated-fpga-utilization.md
     - Git Workflow: git-workflow.md
-    - The RTL Build System and Directory Layout: build-system.md
+    - The Build System and Directory Layout: build-system.md
     - The Test Bench: test-bench.md
     - Software: software.md
     - Installation and Test Builds: installation-and-test-builds.md
