--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -168,3 +168,4 @@ add_subdirectory(hello_world)
 add_subdirectory(hello_dbg)
 add_subdirectory(picolibc_test)
 add_subdirectory(ddr_test)
+add_subdirectory(vera_standalone)
