Build fix for FPGA build trees

--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -168,4 +168,6 @@ add_subdirectory(hello_world)
 add_subdirectory(hello_dbg)
 add_subdirectory(picolibc_test)
 add_subdirectory(ddr_test)
-add_subdirectory(vera_standalone)
+if(CMAKE_BUILD_TYPE STREQUAL "sim")
+    add_subdirectory(vera_standalone)
+endif()
