Add vera_integrated project

--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -170,4 +170,5 @@ add_subdirectory(picolibc_test)
 add_subdirectory(ddr_test)
 if(CMAKE_BUILD_TYPE STREQUAL "sim")
     add_subdirectory(vera_standalone)
+    add_subdirectory(vera_integrated)
 endif()
