--- a/gw/components/vera/Bender.yml
+++ b/gw/components/vera/Bender.yml
@@ -8,11 +8,11 @@ package:
 sources:
   - target: vera
     files:
-     - ../../../sub/vera-module/fpga/source/sim/sprite_ram.v
+     - ../../../sub/vera-module/fpga/source/sprite_ram.v
   - target: memory
     files:
      - ../../../sub/vera-module/fpga/source/palette_ram.mem
-  - target: verilator
+  - target: any(verilator, vivado)
     files:
      - lint.vlt
      - ../../../sub/vera-module/fpga/source/top.v
